# TickStrategy

./: CMakeLists.txt  README.md  app.cmake  func.cmake  lib.cmake
apps/: Public.con  TradingDay.con  tick_strategy
apps/input/data/rb/: 20210421.txt
apps/input/data/ru/: 20210421.txt
apps/input/modelConfig/rb/model1/: model.txt  position.txt  signal.txt
apps/input/modelConfig/rb/model2/: model.txt  position.txt
apps/input/modelConfig/rb/model3/: model.txt  position.txt  signal.txt  threshold.txt
apps/input/modelConfig/ru/model1/: threshold.txt
apps/input/modelConfig/ru/model2/: position.txt  signal.txt  threshold.txt
apps/input/sysConfig/: cancel.txt  contract.product.txt  ctp_config.json  ctp_config1.json  mainContract.txt  pgsql_config.json  productExchange.txt  productInfo.txt  sys_config.json
apps/output/log/: tradeLog.txt
apps/output/pred/: tp.csv
apps/output/pred/rb/model1/: 2021-06-23_model1_pred.csv  2021-07-06_model1_pred.csv  2021-07-08_model1_pred.csv
apps/output/pred/rb/model2/: 2021-06-23_model2_pred.csv  2021-07-06_model2_pred.csv  2021-07-08_model2_pred.csv
apps/output/pred/rb/model3/: 2021-06-23_model3_pred.csv  2021-07-06_model3_pred.csv  2021-07-08_model3_pred.csv
apps/output/pred/ru/model1/: 2021-06-23_model1_pred.csv  2021-07-06_model1_pred.csv  2021-07-08_model1_pred.csv
apps/output/pred/ru/model2/: 2021-06-23_model2_pred.csv  2021-07-06_model2_pred.csv  2021-07-07_model2_pred.csv  2021-07-08_model2_pred.csv
tick_strategy/: CMakeLists.txt  config.h.in
tick_strategy/include/: ConfigTools.h  CtpMD.h  CtpTD.h  GenData.h  JsonTools.h  QuoteService.h  concurrentqueue.h  indicator.h  linear.h  orderBook.h  tick.h
tick_strategy/src/: ConfigTools.cpp  CtpMD.cpp  CtpTD.cpp  JsonTools.cpp  QuoteService.cpp  indicator.cpp  linear.cpp  main.cpp  orderBook.cpp
